# encrypter

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CmakeLists.txt  README.md  build.py
include/: file_encryption.h  file_watcher.h  logger.h  password_prompt.h
src/: file_encryption.cpp  file_watcher.cpp  main.cpp  password_prompt.cpp
test/files/: test.txt
